VERSION 0.9.7
-------------
Release Date: ?

 - added method getLang() to class Peak_Lang
 - modified option punc of method _filter_alpha() in class Peak_Filters_Advanced to accept also a string as list of punctuations
 - added param $force_insert to method save() of class Peak_Model_Zendatable
 - updated debugbar.js
 - updated Peak_View_Helper_Debugbar to support new css
 - added a less file for Peak_View_Helper_Debugbar, updated icons, added a dark theme and compressed debugbar css
 - added htmlentities encode in console log of Peak_View_Helper_Debugbar
 - removed deprecated method display() in class Peak_View_Helper_Debug
 - added new view helper Peak_View_Helper_Grid
 - added method _filter_datetime() to class Peak_Filters_Advanced
 - updated vendor twitter bootstrap to 2.3.1

VERSION 0.9.6 
-------------
Release Date: 2013-04-09

 - Peak_View_Helper_Debugbar chrono now use $_SERVER['REQUEST_TIME_FLOAT'] if php >= 5.4
 - modified class Peak_Spl_Dirinfo to support recursive and non-recursive directory iterator
 - added param $return_row to method exists() in class Peak_Model_Zendatable
 - fixed missing default value for param $action of method redirect() in Peak_Controller_Action
 - removed php5.4 array syntax in method process() of class Peak_View_Helper_Assets
 - added method _filter_time() to class Peak_Filters_Advanced
 - fixed extended class name typo in Peak_View_Helper_Debugbar
 - added method saveTransaction() to class Peak_Model_Zendatable
 - removed deprecated class Peak_View_Helper_Calendar
 - renamed helpers file with first capital letter
 - fixed table/schema name in _getData() of class Peak_Model_Pagination
 - fixed old bug in class "Peak_Helpers" that prevented methods __get() and exists() from sometimes validate a file's existence 
   on an case sensitive os.
 - added method getLanguages() to Peak_Controller_Helper_Request
 - added an auto-detect file extension to Peak_View_Helper_assets